--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,11 @@
-section div {
+/* section div {
     border: 3px solid black;
-}
+} */
 
 #hero {
     height: 300px;
+}
+
+#logo {
+    height:50px;
 }
