--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,18 @@
+/* section div {
+    border: 3px solid black;
+} */
+
+#hero {
+    height: 300px;
+}
 
 #logo {
-    height: 50px;
+    height:50px;
+}
+
+#footer{
+    height:250px;
+    width: 100%;
+    background-color:grey;
+    border: 1px black solid;
 }
