Updated Footer with Mobile-Responsiveness

--- a/styles.css
+++ b/styles.css
@@ -11,8 +11,19 @@
 }
 
 #footer{
-    height:250px;
+    display: flex;
+    height:auto;
     width: 100%;
-    background-color:grey;
-    border: 1px black solid;
+    background-color:rgb(39, 38, 38);
+    color: white;
+}
+
+.footer-copyright a{
+    text-decoration: none;
+    color: white;
+}
+
+.list-unstyled a{
+    font-size: 10px;
+    color: grey;
 }
