--- a/styles.css
+++ b/styles.css
@@ -12,9 +12,8 @@
 
 #footer{
     display: flex;
-    height:auto;
+    height:auto;;
     width: 100%;
-<<<<<<< HEAD
     background-color:rgb(39, 38, 38);
     color: white;
 }
@@ -27,8 +26,4 @@
 .list-unstyled a{
     font-size: 10px;
     color: grey;
-}
-
-.col {
-    padding:0 !important;
 }
