--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,10 @@
 /* section div {
     border: 3px solid black;
 } */
+body{
+    padding: 0;
+    margin: 0;
+}
 
 #hero {
     height: 700px;
@@ -16,6 +20,7 @@
     width: 100%;
     background-color:rgb(39, 38, 38);
     color: white;
+    padding: 0;
 }
 
 .footer-copyright a{
@@ -27,11 +32,3 @@
     font-size: 10px;
     color: grey;
 }
-<<<<<<< HEAD
-=======
-
-.col {
-    padding:0 !important;
-}
-
->>>>>>> 1359a5a102f82369923f24bb0f6bf08f68d0ee70
