--- a/video.css
+++ b/video.css
@@ -6,7 +6,8 @@ header {
     width: 100%;
     overflow: hidden;
   }
-  
+
+ 
   header video {
     position: absolute;
     top: 50%;
@@ -25,7 +26,10 @@ header {
   header .container {
     position: relative;
     z-index: 2;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    text-align: center;
   }
+  
   
   header .overlay {
     position: absolute;
